Use the libarchive library reported by pkg-config
If pkg-config is present, use it to determine how to access libarchive
library and its header file.

This fixes support for MacOS when trying to use libarchive.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/MCONFIG.in
+++ b/MCONFIG.in
@@ -141,7 +141,7 @@ LIBFUSE = @FUSE_LIB@
 LIBSUPPORT = $(LIBINTL) $(LIB)/libsupport@STATIC_LIB_EXT@
 LIBBLKID = @LIBBLKID@ @PRIVATE_LIBS_CMT@ $(LIBUUID)
 LIBINTL = @LIBINTL@
-LIBARCHIVE = @ARCHIVE_LIB@
+LIBARCHIVE = @ARCHIVE_LIBS@
 SYSLIBS = @LIBS@ @PTHREAD_LIBS@
 DEPLIBSS = $(LIB)/libss@LIB_EXT@
 DEPLIBCOM_ERR = $(LIB)/libcom_err@LIB_EXT@
