--- a/debian/control
+++ b/debian/control
@@ -111,7 +111,7 @@ Provides: libss2t64 (= ${binary:Version})
 Breaks: libss2t64 (<< 1.47.0-2.4~exp1~)
 Section: libs
 Priority: optional
-Depends: libcom-err2, ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: libss2t64, e2fsprogs (<< 1.34-1)
 Architecture: any
 Multi-Arch: same
