--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -9,6 +9,7 @@ top_builddir = ..
 my_dir = tests
 INSTALL = @INSTALL@
 MKDIR_P = @MKDIR_P@
+EGREP = "@EGREP@"
 
 @MCONFIG@
 
@@ -24,6 +25,7 @@ test_one: $(srcdir)/test_one.in Makefile mke2fs.conf test_data.tmp
 	@echo "DIFF_OPTS=@UNI_DIFF_OPTS@" >> test_one
 	@echo "SIZEOF_TIME_T=@SIZEOF_TIME_T@" >> test_one
 	@echo "DD=@DD@" >>test_one
+	@echo 'EGREP="@EGREP@"' >>test_one
 	@cat $(srcdir)/test_one.in >> test_one
 	@chmod +x-w test_one
 
