configure: correctly set up CFLAGS while setting up libarchive
Fix a regression where the debugging options ("-g -O") got dropped
while setting up the include path for libarchive.

Fixes: c54a2e825847 ("Use the libarchive library reported by pkg-config")
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/configure.ac
+++ b/configure.ac
@@ -1343,7 +1343,7 @@ then
     PKG_CHECK_MODULES([ARCHIVE],[libarchive],
     [
 	AC_MSG_RESULT([pkg-config found libarchive])
-	CFLAGS="$ARCHIVE_CFLAGS $CPPFLAGS"
+	CFLAGS="$ARCHIVE_CFLAGS $CFLAGS"
     ],[
         AC_CHECK_LIB(archive, archive_read_new, [ARCHIVE_LIBS=-larchive])
     ])
